--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>masherlan repository</title>
+	<title>TWIBBON USP2K21</title>
 </head>
 <body>
 	<div class="isi">
