--- a/index.html
+++ b/index.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>TWIBBON USP2K21</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kontak Darurat</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div class="isi">
- <div class="border"> <p>
- <a href=https://twb.nz/semangatuspdariguru>Guru</a>
-</p>
-  <p>
- <a href=https://twb.nz/semangatuspuntukkita>Peserta</a>
-</p>
- <p>
- <a href=https://twb.nz/semangatuspdariadikkelas>Adik Kelas</a>
-</p>
-</div>
-</div>
-<div class="bawah">
-<p>Pilih salah satu opsi di atas!</p>
-</div>
+    <div class="kontak-darurat">
+        <a href="tel:+62112" class="tombol-kontak">Layanan Darurat - (bebas pulsa)</a>
+    </div>
 </body>
 </html>
+
